resources/tests/invalid_syntax/fn_decl_iden.ct
//`Expected an identifier, not '('!
//1
fn ()->i64;